DRAKEN-2953: Added API for UI schema
